Rejecting connection certificate causes constant connection retries
Steps
- Using any intercepting proxy (
mitmproxy
or other intercepting TLS proxy), connect to a CalDAV Calendar - Window prompts for action on untrusted certificate
- Click Reject
Actual Behaviour
- eds attempts new connections to the CalDAV server constantly (in my case ten or more times per second)
- Setting Evolution to offline mode does not interrupt the connection attempts
Expected Behaviour
- Connections to service with rejected certificate should attempt reconnections at a more sane rate e.g. 1/5 minutes, or only on network status change
- Setting Evolution offline should halt all connection attempts
Confirmed on eds version 3.26.6 and latest dev as of 13 Feb 2019
Edited by Milan Crha