I#86 - Rejecting connection certificate causes constant connection retries

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/86